--- a/index.html
+++ b/index.html
@@ -5,21 +5,35 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./styles/reset.css">
   <link rel="stylesheet" href="./styles/main.css">
+
   <title>Document</title>
 </head>
 <body>
 <div class="wrapper">
 
-  <header>
-    <div class="inner">
-      <p>header</p>
+  <header class="inner">
+    <div class="img-wrapper">
+      <img src="assets/img/F1.png" alt="logo">
+    </div>
+    <div class="right">
+      <div class="social">
+        <i class="fa fa-facebook-square" aria-hidden="true"></i>
+      </div>
+
+      <nav class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </nav>
     </div>
   </header>
 
-    <main><p>main</p></main>
-    <aside><p>aside</p></aside>
+  <main><p>main</p></main>
+  <aside><p>aside</p></aside>
 
   <footer>
     <p>footer</p>
