--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./styles/reset.css">
+<!--  <link rel="stylesheet" href="./styles/reset.css">-->
   <link rel="stylesheet" href="./styles/main.css">
 
   <title>Document</title>
@@ -21,7 +21,13 @@
     </div>
     <div class="right">
       <div class="social">
-        <i class="fa fa-facebook-square" aria-hidden="true"></i>
+        <a href="#"><span class="icon"><i class="fa fa-search"></i></span></a>
+        <div class="icons">
+          <a href="#"><span class="icon"><i class="fa fa-facebook-f"></i></span></a>
+          <a href="#"><span class="icon"><i class="fa fa-linkedin"></i></span></a>
+          <a href="#"><span class="icon"><i class="fa fa-pinterest"></i></span></a>
+          <a href="#"><span class="icon"><i class="fa fa-instagram"></i></span></a>
+        </div>
       </div>
 
       <nav class="menu">
