--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
 <div class="wrapper">
 
   <header class="inner">
+    <nav role="navigation">
+      <div id="menuToggle">
+        <input type="checkbox"/>
+
+        <span></span>
+        <span></span>
+        <span></span>
+
+        <ul id="menu">
+          <a href="#"><li>Home</li></a>
+          <a href="#"><li>About</li></a>
+          <a href="#"><li>Contact</li></a>
+        </ul>
+      </div>
+    </nav>
+
     <div class="img-wrapper">
       <img src="assets/img/F1.png" alt="logo">
     </div>
@@ -30,11 +46,12 @@
         </div>
       </div>
 
-      <nav class="menu">
+      <nav role="navigation" class="menu">
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </nav>
+
     </div>
   </header>
 
