header, body upd

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <title>Document</title>
 </head>
 <body>
-<div class="wrapper">
 
-  <header class="inner">
-    <nav role="navigation">
+
+  <header>
+    <nav role="navigation" class="hamburger">
       <div id="menuToggle">
         <input type="checkbox"/>
 
@@ -54,14 +54,14 @@
 
     </div>
   </header>
-
-  <main><p>main</p></main>
-  <aside><p>aside</p></aside>
+  <div class="wrapper">
+    <main><p>main</p></main>
+    <aside><p>aside</p></aside>
+  </div>
 
   <footer>
     <p>footer</p>
   </footer>
 
-</div>
 </body>
 </html>
