--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
       </nav>
 
     </div>
+
+    <span class="header-search">
+      <a href="#">
+        <i class="fa fa-search"></i>
+      </a>
+    </span>
+
   </header>
   <div class="wrapper">
     <main><p>main</p></main>
