--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
 
     <div class="img-wrapper">
-      <img src="assets/img/F1.png" alt="logo">
+      <img src="assets/img/f1-logo.png" alt="logo">
     </div>
     <div class="right">
       <div class="social">
@@ -266,7 +266,70 @@
       </div>
 
     </main>
-    <aside><p>aside</p></aside>
+
+    <aside>
+      <div class="author-info">
+        <div class="avatar">
+          <img src="./assets/img/2.png" alt="">
+        </div>
+        <h3 class="name">Lewis Carl Davidson Hamilton</h3>
+        <span class="about">
+          British racing driver who races in Formula One for Mercedes-AMG Petronas Motorsport.
+        </span>
+      </div>
+      <div class="social">
+        <a href="#"><span class="icon"><i class="fa fa-facebook-f"></i></span></a>
+        <a href="#"><span class="icon"><i class="fa fa-linkedin"></i></span></a>
+        <a href="#"><span class="icon"><i class="fa fa-pinterest"></i></span></a>
+        <a href="#"><span class="icon"><i class="fa fa-instagram"></i></span></a>
+      </div>
+
+      <div class="subscriber">
+        <input type="text">
+        <button class="action">Subs!</button>
+      </div>
+
+      <div class="searcher">
+        <input type="text">
+        <button class="action">Search</button>
+      </div>
+
+      <div class="tags">
+        <a href="#">formula1</a>
+        <a href="#">speed</a>
+        <a href="#">2019_F1</a>
+        <a href="#">formula1</a>
+        <a href="#">ferrari</a>
+        <a href="#">motorsport</a>
+        <a href="#">formulaone</a>
+        <a href="#">scuderiaferrari</a>
+      </div>
+      <div class="comments">
+
+        <div class="single-comment">
+          <div class="author-img">
+            <img src="./assets/img/vettel.png" alt="">
+          </div>
+          <div class="comment-body">
+            <h5 class="autor-name">Sebastian Vettel</h5>
+            <span class="comment-text">Omg! It's so amazing!</span>
+          </div>
+        </div>
+
+        <div class="single-comment">
+          <div class="author-img">
+            <img src="./assets/img/ma.png" alt="">
+          </div>
+          <div class="comment-body">
+            <h5 class="autor-name">Some One</h5>
+            <span class="comment-text">Woooow! I'm so confused by this one, idk what to do.</span>
+          </div>
+        </div>
+
+      </div>
+
+    </aside>
+
   </div>
 
   <footer>
