--- a/index.html
+++ b/index.html
@@ -341,10 +341,10 @@
 
       <div class="single-comment">
         <div class="author-img">
-          <img src="./assets/img/vers.png" alt="">
+          <img src="./assets/img/verstappen.png" alt="">
         </div>
         <div class="comment-body">
-          <h5 class="autor-name">Some One</h5>
+          <h5 class="autor-name">Max Verstappen</h5>
           <span class="comment-text">Really nice today's breaking news.</span>
         </div>
       </div>
@@ -417,7 +417,21 @@
 </div>
 
 <footer>
-  <p>footer</p>
+  <div class="footer-left">
+    <ul class="footer-nav">
+      <li><a href="#"> <i class="fa fa-home"></i> Home</a></li>
+      <li><a href="#"><i class="fa fa-envelope"></i> Contact</a></li>
+      <li><a href="#"><i class="fa fa-question"></i> About</a></li>
+    </ul>
+  </div>
+  <div class="footer-right">
+    <div class="icons">
+      <a href="#"><span class="icon"><i class="fa fa-facebook-f"></i></span></a>
+      <a href="#"><span class="icon"><i class="fa fa-linkedin"></i></span></a>
+      <a href="#"><span class="icon"><i class="fa fa-pinterest"></i></span></a>
+      <a href="#"><span class="icon"><i class="fa fa-instagram"></i></span></a>
+    </div>
+  </div>
 </footer>
 
 </body>
