--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!--  <link rel="stylesheet" href="./styles/reset.css">-->
   <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/media.css">
+  <link rel="stylesheet" href="./styles/hamburg.css">
 
-  <title>Document</title>
+  <title>Blog by Lewis Hamilton</title>
 </head>
 <body>
 
@@ -69,7 +70,7 @@
 </header>
 
 <div class="wrapper">
-  <div class="top-author author-info hidden-large">
+  <div class="author-info hidden-large hidden-aside-top">
     <div class="avatar">
       <img src="./assets/img/2.png" alt="">
     </div>
