--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
         </div>
         <div class="comment-body">
           <h5 class="autor-name">Sebastian Vettel</h5>
+          <span class="date">3 hours ago</span>
           <span class="comment-text">Omg! It's so amazing!</span>
         </div>
       </div>
@@ -336,6 +337,7 @@
         </div>
         <div class="comment-body">
           <h5 class="autor-name">Some One</h5>
+          <span class="date">2 hours ago</span>
           <span class="comment-text">Woooow! I'm so confused by this one, idk what to do.</span>
         </div>
       </div>
@@ -346,6 +348,7 @@
         </div>
         <div class="comment-body">
           <h5 class="autor-name">Max Verstappen</h5>
+          <span class="date">1 hour ago</span>
           <span class="comment-text">Really nice today's breaking news.</span>
         </div>
       </div>
@@ -389,6 +392,7 @@
         </div>
         <div class="comment-body">
           <h5 class="autor-name">Sebastian Vettel</h5>
+          <span class="date">3 hours ago</span>
           <span class="comment-text">Omg! It's so amazing!</span>
         </div>
       </div>
@@ -399,6 +403,7 @@
         </div>
         <div class="comment-body">
           <h5 class="autor-name">Some One</h5>
+          <span class="date">2 hours ago</span>
           <span class="comment-text">Woooow! I'm so confused by this one, idk what to do.</span>
         </div>
       </div>
@@ -409,6 +414,7 @@
         </div>
         <div class="comment-body">
           <h5 class="autor-name">Some One</h5>
+          <span class="date">1 hour ago</span>
           <span class="comment-text">Really nice today's breaking news.</span>
         </div>
       </div>
